# ailib

./: .gitignore  BaseEstimator.cpp  BaseEstimator.h  CMakeLists.txt  KNeighborsBase.cpp  KNeighborsBase.h  MultioutputMixin.cpp  MultioutputMixin.h  ValueException.h  ailib.cpp  ailib.h  ailib.vcxproj  ailib.vcxproj.filters  file_utilities.cpp  file_utilities.h  main.cpp  mathutils.cpp  mathutils.h  pch.h
Debug/: UnitTests.ilk  ailib.idb  ailib.lib  ailib.nativecodeanalysis.xml  ailib.pch  ailib.pchast  file_utilities.nativecodeanalysis.xml  mathutils.nativecodeanalysis.xml  tests.ilk
Debug/ailib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  ailib.lastbuildstate
OldProj/: ailib.sln
OldProj/ailib/: Classifier.h  FileUtilities.cpp  FileUtilities.h  KNeighborsClassifier.cpp  KNeighborsClassifier.h  LinAlg.cpp  LinAlg.h  Mixin.h  SVMClassifier.cpp  SVMClassifier.h  ailib.vcxproj  ailib.vcxproj.filters  cpp.hint  mathutils.h
UnitTests/: UnitTests.vcxproj  packages.config  test.cpp
UnitTests/Debug/: vc141.idb
ailib/: Classifier.h  KNeighborsClassifier.cpp  KNeighborsClassifier.h  LinAlg.cpp  LinAlg.h  SVMClassifier.cpp  SVMClassifier.h  ailib.cpp  ailib.h  ailib.vcxproj  ailib.vcxproj.filters  mathutils.cpp  mathutils.h  mnist_train_light.csv  pch.h
ailib/Debug/: ailib.idb  vc.nativecodeanalysis.all.xml
ailib/Release/: vc.nativecodeanalysis.all.xml
src/FileSys/: CSV.h  CSVReader.cpp  CSVReader.h
src/Math/: DistanceMethods.cpp  DistanceMethods.h
tests/: test.cpp  tests.vcxproj
(+46 files in other folders)
